<resources>
    <string name="app_name">WebSocketTest</string>
    <!--server-->
    <string name="server_pref_id">server_url</string>
    <string name="server_default_value"></string>

    <!--titles-->
    <string name="title_change">change</string>
    <string name="title_default">default</string>
    <string name="title_send">send</string>
    <string name="title_receive">receive</string>
    <string name="title_save">save</string>
    <string name="title_choose">choose</string>
    <!--hints-->
    <string name="hint_enter_server">Enter Server</string>

</resources>
